--- a/finalForm.html
+++ b/finalForm.html
@@ -28,8 +28,8 @@
         :root {
 
             --background--button: linear-gradient(135deg, #ec6c0a, #f5421a);
-            --background--button1: linear-gradient(135deg, #1c8ae3, #52eecc);
-            --background--screen: url(pexels-scott-webb-1022923.jpg);
+            --background--button1: linear-gradient(135deg, #72ee70, #f3f14f);
+            --background--screen: url(pexels-eberhard-grossgasteiger-2088203.jpg);
             --background--form: transparent;
         }
     </style>
