--- a/finalForm.html
+++ b/finalForm.html
@@ -311,9 +311,9 @@
 
                         <div class="col-lg-5">
                             <!-- Add a text field for the user to enter a new skill -->
-                            <label for="diff" style="margin-top:1rem;">Technology used</label>
+                            <label for="diff" style="margin-top:1rem; font-size: smaller;">Technology used (-) Separated</label>
                             <input type="text" class="form-control" id="newProjectTech"
-                                placeholder="Enter Comma Separated">
+                                placeholder="eg.(C++ - html - java)">
                             <!-- Add a select menu for the proficiency level of the new skill -->
                         </div>
                     </div>
@@ -333,7 +333,7 @@
 
                         <div class="col-lg-5">
                             <!-- Add a text field for the user to enter a new skill -->
-                            <label for="diff" style="margin-top:1rem;">Difficulty level</label>
+                            <label for="diff" style="margin-top:1rem;">Difficulty level (1-10)</label>
                             <input type="number" min="0" max="10" class="form-control" id="newProjectDiffLevel"
                                 placeholder="10 is most Difficult">
                             <!-- Add a select menu for the proficiency level of the new skill -->
