--- a/finalForm.html
+++ b/finalForm.html
@@ -136,7 +136,7 @@
                                 <div class="col-lg-5">
                                     <label for="itc" style="margin-top:1rem;">Intro to Computing</label>
                                     <input type="number" min="0" max="100"  class="form-control" id="itcNum" name="itc"
-                                        placeholder="Marks out of 100" required>
+                                        placeholder="Marks out of 100">
                                 </div>
 
                                 <div class="col-lg-1"></div>
@@ -145,14 +145,14 @@
                                     <label for="pf" style="margin-top:1rem; font-size: smaller;">Programming
                                         Fundamentals</label>
                                     <input type="number" min="0" max="100"  class="form-control" id="pfNum" name="pf"
-                                        placeholder="Marks out of 100" required>
+                                        placeholder="Marks out of 100">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-5">
                                     <label for="pfLab" style="margin-top:1rem;">PF Lab</label>
                                     <input type="number" min="0" max="100"   class="form-control" id="pfLabNum"
-                                        name="pfLab" placeholder="Marks out of 100" required>
+                                        name="pfLab" placeholder="Marks out of 100">
                                 </div>
 
                                 <div class="col-lg-1"></div>
@@ -161,7 +161,7 @@
                                     <label for="oop" style="margin-top:1rem; font-size: smaller;">Object Oriented
                                         Prog</label>
                                     <input type="number" min="0" max="100"  class="form-control" id="oopNum" name="oop"
-                                        placeholder="Marks out of 100" required>
+                                        placeholder="Marks out of 100">
                                 </div>
                             </div>
 
@@ -169,7 +169,7 @@
                                 <div class="col-lg-5">
                                     <label for="oopLab" style="margin-top:1rem;">OOP Lab</label>
                                     <input type="number" min="0" max="100"   class="form-control" id="oopLabNum"
-                                        name="oopLab" placeholder="Marks out of 100" required>
+                                        name="oopLab" placeholder="Marks out of 100">
                                 </div>
 
                                 <div class="col-lg-1"></div>
@@ -178,14 +178,14 @@
                                     <label for="dsa" style="margin-top:1rem; font-size: smaller;">Data Structures
                                         (DSA)</label>
                                     <input type="number" min="0" max="100"  class="form-control" id="dsaNum" name="dsa"
-                                        placeholder="Marks out of 100" required>
+                                        placeholder="Marks out of 100">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-5">
                                     <label for="dsaLAB" style="margin-top:1rem;">DSA Lab</label>
                                     <input type="number" min="0" max="100"  class="form-control" id="dsaLabNum"
-                                        name="dsaLab" placeholder="Marks out of 100" required>
+                                        name="dsaLab" placeholder="Marks out of 100">
                                 </div>
 
                                 <div class="col-lg-1"></div>
@@ -193,7 +193,7 @@
                                 <div class="col-lg-5">
                                     <label for="algo" style="margin-top:1rem;">Analysis of Algorithms</label>
                                     <input type="number" min="0" max="100"   class="form-control" id="algoNum" name="algo"
-                                        placeholder="Marks out of 100" required>
+                                        placeholder="Marks out of 100">
                                 </div>
                             </div>
 
@@ -201,7 +201,7 @@
                                 <div class="col-lg-5">
                                     <label for="db" style="margin-top:1rem;">DataBase Systems</label>
                                     <input type="number" min="0" max="100"  class="form-control" id="dbNum" name="db"
-                                        placeholder="Marks out of 100" required>
+                                        placeholder="Marks out of 100">
                                 </div>
 
                                 <div class="col-lg-1"></div>
@@ -209,7 +209,7 @@
                                 <div class="col-lg-5">
                                     <label for="dbLab" style="margin-top:1rem;">DBS Lab</label>
                                     <input type="number" min="0" max="100"   class="form-control" id="dbLab" name="dbLab"
-                                        placeholder="Marks out of 100" required>
+                                        placeholder="Marks out of 100">
                                 </div>
                             </div>
 
@@ -217,7 +217,7 @@
                                 <div class="col-lg-5">
                                     <label for="web" style="margin-top:1rem;">Web Engineering</label>
                                     <input type="number" min="0" max="100"   class="form-control" id="webNum" name="web"
-                                        placeholder="Marks out of 100" required>
+                                        placeholder="Marks out of 100">
                                 </div>
 
                                 <div class="col-lg-1"></div>
@@ -225,7 +225,7 @@
                                 <div class="col-lg-5">
                                     <label for="webLab" style="margin-top:1rem;">WEB Lab</label>
                                     <input type="number" min="0" max="100"   class="form-control" id="webLab"
-                                        name="webLab" placeholder="Marks out of 100" required>
+                                        name="webLab" placeholder="Marks out of 100">
                                 </div>
                             </div>
 
