Points allowed in %age

--- a/finalForm.html
+++ b/finalForm.html
@@ -120,7 +120,7 @@
                             <div class="row">
                                 <div class="col-lg-5">
                                     <label for="matric" style="margin-top:1rem;">Matric Percentage</label>
-                                    <input type="number" min="0" max="100" class="form-control" id="matricNum"
+                                    <input type="number" min="0" max="100" step="0.01" class="form-control" id="matricNum"
                                         name="matric" placeholder="Enter Your Matric %" required>
                                 </div>
 
@@ -128,7 +128,7 @@
 
                                 <div class="col-lg-5">
                                     <label for="inter" style="margin-top:1rem;">Inter Percentage</label>
-                                    <input type="number" min="0" max="100" class="form-control" id="interNum"
+                                    <input type="number" min="0" max="100" step="0.01"class="form-control" id="interNum"
                                         name="inter" placeholder="Enter Your Inter %" required>
                                 </div>
                             </div>
